--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caleb</title>
-    <link rel="shortcut icon" href="img/png-transparent-son-goku-illustration-goku-dragon-ball-z-legendary-super-warriors-majin-buu-goku-superhero-cartoons-fictional-character-thumbnail.png" type="image/x-icon">
-<link rel="stylesheet" href="style.CSS">
+  <title>Mi Página Web Dinámica</title>
+  <link rel="stylesheet" href="style.CSS">
 </head>
 <body>
-    <head>
-        <ul type="circle">
-            
-            <li><a href="https://openai.com/chatgpt/">Menu</a></li>
-            <li>Inicio</li>
-        </ul>
-    </head>
+  <nav> 
+    <ul>
+      <li><a href="#">Inicio</a></li>
+      <li><a href="#">Nosotros</a></li>
+    </ul>
+  </nav>
+
+  <div class="container">
+    <h1>Bienvenido a mi página</h1>
+    <p>Ingresa tu nombre:</p>
+    <input type="text" id="nombre">
+    <button onclick="mostrarMensaje()">Enviar</button>
+    <img src="tu_imagen.jpg" alt="Tu imagen">
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
