--- a/index.html
+++ b/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mi Página Web Dinámica</title>
+  <title>Mi Página Web Responsive</title>
   <link rel="stylesheet" href="style.CSS">
 </head>
 <body>
-  <nav> 
+  <nav>
     <ul>
       <li><a href="#">Inicio</a></li>
       <li><a href="#">Nosotros</a></li>
     </ul>
   </nav>
-
   <div class="container">
-    <h1>Bienvenido a mi página</h1>
-    <p>Ingresa tu nombre:</p>
-    <input type="text" id="nombre">
-    <button onclick="mostrarMensaje()">Enviar</button>
-    <img src="tu_imagen.jpg" alt="Tu imagen">
-  </div>
-
-  <script src="script.js"></script>
+    </div>
 </body>
 </html>
