--- a/index.html
+++ b/index.html
@@ -3,39 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Dinámica</title>
-    <link rel="stylesheet" href="style.CSS">
+    <title>Página Web Interactiva</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <!-- Estilos personalizados -->
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Mi Sitio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#inicio">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#nosotros">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#registro">Registro</a>
+                </li>
             </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <section id="inicio">
-            <h1>Bienvenido a Nuestra Página</h1>
-            <div class="form-container">
-                <label for="text-input">Ingresa tu texto:</label>
-                <input type="text" id="text-input" placeholder="Escribe aquí...">
-            </div>
-            <div class="image-container">
-                <img src="img/imagen.png" alt="Imagen de ejemplo">
-            </div>
-        </section>
+        </div>
+    </nav>
 
-        <section id="nosotros">
-            <h2>Sobre Nosotros</h2>
-            <p>Somos una empresa dedicada a proporcionar las mejores soluciones para tus necesidades. ¡Contáctanos para más información!</p>
-        </section>
-    </main>
-    
-    <footer>
+    <!-- Sección Inicio -->
+    <div class="container mt-4" id="inicio">
+        <h1>Bienvenido a Nuestra Página</h1>
+    </div>
+
+    <!-- Sección Nosotros -->
+    <div class="container mt-4" id="nosotros">
+        <h2>Sobre Nosotros</h2>
+        <p>Somos una empresa dedicada a proporcionar las mejores soluciones para tus necesidades. ¡Contáctanos para más información!</p>
+    </div>
+
+    <!-- Sección Registro -->
+    <div class="container mt-4" id="registro">
+        <h2>Registro</h2>
+        <div id="form-container">
+            <label for="name-input" class="form-label">Ingresa tu nombre:</label>
+            <input type="text" id="name-input" class="form-control mb-3" placeholder="Escribe aquí...">
+            <button class="btn btn-primary" onclick="showQuestion()">Enviar</button>
+        </div>
+        <div id="question-container" class="d-none mt-4">
+            <p id="question"></p>
+            <button class="btn btn-success me-2" onclick="showResponse(true)">Sí</button>
+            <button class="btn btn-danger" onclick="showResponse(false)">No</button>
+        </div>
+        <div id="response-container" class="mt-4 d-none">
+            <img id="response-image" src="" alt="Respuesta" class="img-fluid rounded">
+        </div>
+    </div>
+
+    <!-- Pie de Página -->
+    <footer class="text-center mt-4">
         <p>&copy; 2024 Página Dinámica. Todos los derechos reservados.</p>
     </footer>
+
+    <!-- Bootstrap JS y dependencias -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <!-- Script personalizado -->
+    <script src="script.js"></script>
 </body>
 </html>
